3.6/mule-user-guide/mule-expression-language-examples.adoc
= Mule Expression Language Examples
:keywords: anypoint studio, esb, mel, mule expression language, native language, custom language, expression, mule expressions

This document walks through a few simple examples that introduce most of the basic implementations of Mule Expression Language (MEL). Each example includes a step-by-step guide for creating the flow in Studio's visual editor or in XML. You can also jump straight to the link:#MuleExpressionLanguageExamples-code[complete code for all six examples], which you can copy and manipulate further in your own applications.

*link:#MuleExpressionLanguageExamples-t[Skip to the code]*


== Assumptions

This document assumes you are familiar with Mule Expression Language's link:/documentation/display/current/Mule+Expression+Language+Basic+Syntax[basic syntax] and are comfortable building and running Mule applications using link:/documentation/display/current/Anypoint+Studio+Essentials[Mule Studio] or XML.

If you aren't yet familiar with how to access information about the Mule messages that pass through your applications, consider following this link:/documentation/display/current/Mule+Message+Tutorial[tutorial], which walks you through both examining your Mule message and its data structure and writing simple MEL expressions.

== Example 1 – Accessing Properties

This example creates a simple web service that takes an HTTP request that includes a `username` parameter and returns a greeting using that `username`.

In this example, you use MEL to:

* access an inbound property
* dynamically set the payload

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. In a new flow, drag an HTTP connector and a Set Payload transformer.
+
image:/documentation/download/thumbnails/122752119/greeting+flow.png?version=1&modificationDate=1418927912908[image]

. Open the HTTP connector's properties editor and give it the path `greet1`. Then create a Connector Configuration element for it and set its host to `localhost` and port to `8081`. In this way, the connector will be reached via the URI `http://localhost:8081/greet1`
. Open the Set Payload's properties editor and set the value field with the following MEL expression:
+
[source]
----
Hello #[message.inboundProperties.'http.query.params'.username]
----
+
This expression will capture the inbound property "username", which is passed as a query string parameter when calling the service.
. Save and run the project.
. Through a web browser, access the URL ` http://localhost:8081/greet1?username=yourName ` +
The response prints the words `Hello yourName` in your browser.

....
[tab,title="XML Editor"]
....

. In a new flow, add an `http:listener` and configure it with the path `greet1`.
+
[source, xml]
----
<http:listener config-ref="HTTP_Listener_Configuration" path="greet1" doc:name="HTTP"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*config-ref* a|
----
HTTP_Listener_Configuration
----
|*path* a|
----
greet1
----
|*doc:name* a|
----
HTTP
----

|===
+
In this way, the connector will be reached via the URI `http://localhost:8081/greet1`.
. Create a Connector Configuration element for it with a name that matches the referenced element in `config-ref`. Set the Port to 8081 and the Path to `localhost`
+
[source, xml]
----
<http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
a|
----

name
----

 a|
----

HTTP_Listener_Configuration
----

|*host* a|
----

---
localhost
----

---

|*port* a|
----

8081
----

|*path* a|
----

greet1
----

|*http://docname[doc:name]* a|
----

HTTP_Listener_Configuration
----

|===
. After the connector, add a `set-payload` transformer, configured as shown:
+
[source, xml]
----
<set-payload value="Hello #[message.inboundProperties.'http.query.params'.username]" doc:name="Set Payload"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*value* a|
----
Hello #[message.inboundProperties.'http.query.params'.username]
----
|*doc:name* a|
----
Set Payload
----

|===
+
The MEL expression used in `value` will capture the inbound property `username`, which is passed as a query string parameter when calling the service.
. The full code of your flow should look like this:
+
[source, xml]
----
<http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>
    <flow name="greetingFlow1" doc:name="greetingFlow1">
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet1" doc:name="HTTP"/>
        <set-payload value="Hello #[message.inboundProperties.'http.query.params'.username]" doc:name="Set Payload"/>
    </flow>
----

. Save and run the project.
. Through a browser, access the URL` http://localhost:8081/greet1?username=yourName ` +
This will print the words `Hello yourName` in your browser.

....
------

== Example 2 – Dynamic Routing by Evaluating a Condition

In the previous example, if your call to the service doesn't include a `username` parameter, it results in an error. You can prevent this from happening by adding some flow control components. This example includes a Choice Router that verifies if the required parameter is being passed.

In this example, you use MEL to:

* evaluate conditions in a choice component
* access an inbound property
* dynamically set the payload

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. In a new flow, drag an HTTP connector and a Choice Router. Inside this Choice Router, add a Set Payload component in the space provided for the Default action and another Set Payload as a separate branch, as shown below. 
+
image:/documentation/download/attachments/122752119/greet2.png?version=1&modificationDate=1418938446316[image]

. Open the HTTP Connector's properties editor and give it the path `greet2`. In the Connector Configuration field, simply select the same global element you created for the previous example out of the dropdown list. In this way, the connector will be reached via the URI` http://localhost:8081/greet2`.
. Open the properties editor of the Set Payload transformer that sits in the Default space and set the *Display Name* to `Set Payload for valid username` and configure the *Value* with the following MEL expression:
+
[source]
----
Hello #[message.inboundProperties.'http.query.params'.username]
----
+
This expression captures the inbound property "username", which is passed as a query string parameter when calling the service.
. Open the properties editor of the other Set Payload transformer (the one that doesn't sit in the default space) and set the *Display Name* to `Set Payload for invalid username` and configure the *Value* with the expression `#['No username provided']`.
. Open the Choice Router's properties editor to configure the routing logic. Double click on row for the non-default route to provide a conditional expression. In the window that opens up, write the following MEL expression:
+
[source]
----
#[message.inboundProperties.'http.query.params'.username == empty]
----
+
This expression accesses the username inbound property and determines whether or not it is `null` or an empty string. This expression returns either Boolean true or false.
+
[TIP]
====
In MEL, the keyword `empty` tests the emptiness of a value, and returns boolean true for any of the following:` `

* `null`
* boolean false
* empty strings or strings with only white space
* 0 value numeric values
* empty collections
====
. Save and run the project.
. Through a web browser, access the URL ` http://localhost:8081/greet2?username=yourName`. This prints the words `Hello yourName` in your browser.
. Then, access the URL again, but this time do not include any parameters. Verify that the expected output is received.

....
[tab,title="XML Editor"]
....

. In a new flow, add an `<http:listener` element, with its path set to `greet2` and that references the global element you created in the previous example:
+
[source, xml]
----
<http:listener config-ref="HTTP_Listener_Configuration" path="greet2" doc:name="HTTP"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*config-ref* a|
----

HTTP_Listener_Configuration
----

|*path* a|
----

greet2
----

|*doc:name* a|
----

HTTP
----

|===
+
In this way, the connector will be reached via the URI `http://localhost:8081/greet2`.
. After the connector, add a choice element with two possible outputs. One of these outputs will be the default, the other will evaluate a MEL expression.
+
[source, xml]
----
<choice doc:name="Choice">
            <when>

            </when>
            <otherwise>

            </otherwise>
        </choice>
----
+
Inside the `when` tag, write the following MEL expression:
+
[source]
----
expression="#[message.inboundProperties.'http.query.params'.username == empty]"
----
+
This expression accesses the username inbound property and determines whether or not it is `null` or an empty string. This expression returns either Boolean true or false.
+
[TIP]
====
In MEL, the keyword `empty` tests the emptiness of a value, and returns boolean true for any of the following:` `

* `null`
* boolean false
* empty strings or strings with only white space
* 0 value numeric values
* empty collections
====
. On each of the two paths in the choice router, add a `set-payload` transformer. In the first `set-payload` transformer, add the following attributes:
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*value* a|
----
#[No username provided]
----

|*doc:name* a|
----
Set Payload for invalid username
----

|===
+
In the second set-payload transformer, use a MEL expression to access the inbound property:
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*value* a|
----
"Hello #[message.inboundProperties.'http.query.params'.username]"
----

|*doc:name* a|
----
Set Payload for valid username
----

|===
+
The MEL expression in the second `set-property`'s `value` attribute captures the inbound property `username`, which is passed as a query string parameter when calling the service.
+
[source, xml]
----
<choice doc:name="Choice">
            <when expression="#[message.inboundProperties.'http.query.params'.username == empty]">
                <set-payload value="#['No username provided']" doc:name="Set Payload for invalid username"/>
            </when>
            <otherwise>
                <set-payload value="Hello #[message.inboundProperties.'http.query.params'.username]" doc:name="Set Payload for valid username"/>
            </otherwise>
        </choice>
----

. The full code of your flow should look like this:
+
[source, xml]
----
<flow name="greetingFlow2" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet2" doc:name="HTTP"/>
        <choice doc:name="Choice">
            <when expression="#[message.inboundProperties.'http.query.params'.username == empty]">
                <set-payload value="#['No username provided']" doc:name="Set Payload for invalid username"/>
            </when>
            <otherwise>
                <set-payload value="Hello #[message.inboundProperties.'http.query.params'.username]" doc:name="Set Payload for valid username"/>
            </otherwise>
        </choice>
    </flow>
----

. Save and run the project.
. Through a browser, access the URL` http://localhost:8081/greet1?username=yourName ` +
This prints the words `Hello yourName` in your browser.
. Then, access the URL again, but this time do not include any parameters. Verify that the expected output is received.

....
------

== Example 3 – Variable Assignment and Evaluating Conditions

In this example, the service saves a CSV file with user data besides just returning a greeting. The call to the service will now include two parameters, `username` and `age`. The service stores these two parameters and adds a third boolean parameter that evaluates if the user is underage (if `age` is > 18).

In this example, you will use MEL to:

* set a flow variable in the message
* generate an output based on evaluating the input
* access an inbound property
* dynamically set the payload

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. In a new flow, drag an HTTP connector, followed by an Expression component, then a Set Payload component, a File Endpoint, and finally another Set Payload Component.
+
image:/documentation/download/attachments/122752119/greeting3.png?version=1&modificationDate=1419001403612[image] +

. Open the HTTP connector's properties editor and give it the *Path* `greet3`. In this way, the connector will be reached via the URI ` http://localhost:8081/greet3`.
. In the expression component, set the following MEL expression:
+
[source]
----
flowVars.username = message.inboundProperties.'http.query.params'.username
----
+
This expression takes the value of the inbound property `username` and sets it as the flow variable `username`.
+
[TIP]
Because this MEL expression is used in an *expression component,* it doesn't need to be surrounded with #[].
. In the Set Payload transformer, set the *Value* to the following MEL expressions:
+
[source]
----
#[message.inboundProperties.'http.query.params'.username], #[message.inboundProperties.'http.query.params'.age], #[message.inboundProperties.'http.query.params'.age > 18]
----
+
This will set the payload to a string that contains three comma separated values. The third of these values is evaluating a condition and returns `true` or `false` depending on the user's age.
. In the properties editor of the File endpoint, set a path for the file to be saved.
. Open the properties editor of the final Set Payload transformer and set the *Value* field with the following MEL expression:
+
[source]
----
Hello #[flowVars.username]
----
+
This expression will capture the flow variable `username`, which was created by the Expression Component in your flow.
. Save and run the project.
. Through a web browser, access the URL ` http://localhost:8081/greet3?username=yourName&age=22 ` +
This will print the words `Hello yourName` in your browser and also save a csv file that contains this data, plus the value `true` for the boolean parameter.

....
[tab,title="XML Editor"]
....

. In a new flow, add an `http:listener`. Configure it as shown:
+
[source, xml]
----
<http:listener config-ref="HTTP_Listener_Configuration" path="greet3" doc:name="HTTP"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*config-ref* a|
----

HTTP_Listener_Configuration
----

|*path* a|
----

greet3
----

|*doc:name* a|
----

HTTP
----

|===
+
In this way, the connector will be reached via the URI `http://localhost:8081/greet3`.
. After the connector, add an expression component that will use a MEL expression to record the inbound property `username` into a flowVar.
+
[source, xml]
----
<expression-component doc:name="Expression"><![CDATA[flowVars.username = message.inboundProperties.'http.query.params'.username]]>
        </expression-component>
----
+
This expression takes the value of the inbound property `username` and sets it as the flow variable `username`.
+
[TIP]
Since this MEL expression is used in an *expression component,* it doesn't need to be surrounded with brackets `#[]`
. Add a Set Payload transformer and set the `value` field to a MEL expression:
+
[source, xml]
----
<set-payload value="#[message.inboundProperties.'http.query.params'.username], #[message.inboundProperties.'http.query.params'.age], #[message.inboundProperties.'http.query.params'.age &gt;18]" doc:name="Set Payload"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*value* a|
----
#[message.inboundProperties.'http.query.params'.username], #[message.inboundProperties.'http.query.params'.age], #[message.inboundProperties.'http.query.params'.age &gt;18]
----

|*doc:name* a|
----
Set Payload
----
|===
+
This will set the payload to a string that contains three comma separated values. The third of these values is evaluating a condition and returns `true` or `false` depending on the user's age.
. Below, add a `file:outbound-endpoint` to send this data to a file:
+
[source, xml]
----
<file:outbound-endpoint path="path_of_your_choice" responseTimeout="10000" doc:name="File"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
a|
----
path
----
a|
_(Example)_

`/Users/AaronMacbook/Downloads`

a|
----
responseTimeout
----

a|
----
10000
----

a|
----
doc:name
----

a|
----
File
----

|===
. Below, add another Set Payload transformer containing a MEL expression that references the flow variable that you set earlier in the flow:
+
[source, xml]
----
<set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
----
+
This expression will access the flow variable `username`, which was created by the Expression Component in your flow.
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
a|
----
value
----
a|
----
Helo #[flowVars.username]
----

a|
----
doc:name
----

a|
----
Set Payload
----
|===
. The full code of your flow should look like this:
+
[source, xml]
----
<flow name="greetingFlow3" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet3" doc:name="HTTP"/>
        <expression-component doc:name="Expression"><![CDATA[flowVars.username = message.inboundProperties.'http.query.params'.username]]></expression-component>
        <set-payload value="#[message.inboundProperties.'http.query.params'.username], #[message.inboundProperties.'http.query.params'.age], #[message.inboundProperties.'http.query.params'.age &gt;18]" doc:name="Set Payload"/>
        <file:outbound-endpoint path="path_of_your_choice" responseTimeout="10000" doc:name="File"/>
        <set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
    </flow>
----

. Save and run your project.
. In a browser, access the URL` http://localhost:8081/greet3?username=yourName&age=22 ` +
This will print the words `Hello yourName` in your browser and also save a csv file that contains this data, plus the value `true` for the boolean parameter.

....
------

== Example 4 – Creating Maps and Evaluating Conditions with DataMapper

_*Enterprise*_

In this example, like in the previous one, the Mule application saves a CSV file with user data and returns a greeting. The call to the service includes two parameters, `username` and `age`. The service stores these two parameters and adds a third boolean parameter that evaluates if the user is above a certain age (if `age ``> 18`). In this case, however, the mapping between input and output fields and the generation of the third field is performed by a link:/documentation/display/current/Datamapper+User+Guide+and+Reference[DataMapper] component.

In this example, you will use MEL to:

* set a flow variable in the message
* set a map as your message payload
* generate an output based on evaluating the input within DataMapper
* access an inbound property
* dynamically set the payload

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. In a new flow, drag an HTTP connector, followed by an Expression Component, then a Set Payload transformer, a DataMapper transformer, a File Endpoint, and finally another Set Payload transformer.
+
image:/documentation/download/attachments/122752119/greeting4.png?version=1&modificationDate=1419006774170[image]

. Open the HTTP connector's properties editor and give it the path `greet4` and select the global element you previously created in the Connector Config field. In this way, the connector will be reached via the URI ` http://localhost:8081/greet4 `.
. In the expression component, set the following MEL expression:
+
[source]
----
flowVars.username = message.inboundProperties.'http.query.params'.username
----
+
[TIP]
Since this MEL expression is used in an *expression component,* it doesn't need to be surrounded with `#[]`.
. In the Set Payload transformer, set the *Value* field to the following MEL expression:
+
[source]
----
#[['username' : message.inboundProperties.'http.query.params'.username, 'age' : message.inboundProperties.'http.query.params'.age]]
----
+
This will set the payload to a map that contains two key:value pairs.
. In the DataMapper properties editor, configure the fields as shown: 
+
** in the Input, keep the default **Map<k,v>* type and select *User Defined** structure.
** in the Output, select *CSV* type and *User Defined* structure.
+
image:/documentation/download/attachments/122752119/mel+ex+datamapper.png?version=1&modificationDate=1419008048272[image]

. Give your map a *Name* and *Type*, then create two fields by clicking the green plus sign:
+
[cols=",",options="header",]
|===
|Name |Type
|*username* |String
|*age* |Integer
|===
+
image:/documentation/download/attachments/122752119/MELex4-input.png?version=1&modificationDate=1397167796303[image]

. For the Output, click *Edit Fields*, then give the output a *Name*, select a *Delimiter*, and create three fields, as shown: 
+
image:/documentation/download/attachments/122752119/MELex4-output.png?version=1&modificationDate=1397167796316[image]

. Click *Create Mapping* to trigger DataMapper to generate the mapping.
. DataMapper now displays the mapping between input and output fields. The third output field (of_age) needs a MEL expression to get its values. Select it and then write the following MEL expression in the input box below:
+
[source]
----
input.age>18
----
+
The resulting mapping should look like this:
+
image:/documentation/download/attachments/122752119/mel+ex+datamapper2.png?version=1&modificationDate=1419012267687[image]
. In the File endpoint, set a path of your choice for the file to be saved.
. Open the properties editor of the final Set Payload transformer and set the *Value* field with the following:
+
[source]
----
Hello #[flowVars.username]
----
+
This expression will access the flow variable `username`, which was created by the Expression Component in your flow.
. Save and run the project.
. In a browser, access the URL `http://localhost:8081/greet4?username=yourName&age=22 `
This will print the words `Hello yourName` in your browser and also save a csv file that contains this data, plus the value `true` for the boolean parameter.

....
[tab,title="XML Editor"]
....

. In a new flow, add an `http:listener` configured as shown.
+
[source, xml]
----
<http:listener config-ref="HTTP_Listener_Configuration" path="greet4" doc:name="HTTP"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*config-ref* a|
----

HTTP_Listener_Configuration
----

|*path* a|
----

greet4
----

|*http://docname[doc:name]* a|
----

HTTP
----

|===
+
In this way, the connector is reached via the URI `http://localhost:8081/greet4`.
. After the connector, add an expression component that will use a MEL expression to record the inbound property `username` into a flow variable of the same name.
+
[source, xml]
----
<expression-component doc:name="Expression"><![CDATA[flowVars.username = message.inboundProperties.'http.query.params'.username]]>
        </expression-component>
----
+
[TIP]
Since this MEL expression is used in an *expression component,* it doesn't need to be surrounded with `#[]`.
. Add a set-payload transformer and set the value attribute to a MEL expression:
+
[source, xml]
----
<set-payload value="#[['username' :  message.inboundProperties.'http.query.params'.username, 'age' :  message.inboundProperties.'http.query.params'.age]]" doc:name="Set Payload"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*value* a|
----
#[['username' :  message.inboundProperties.'http.query.params'.username, 'age' :  message.inboundProperties.'http.query.params'.age]]
----
|*doc:name* a|
----
Set Payload
----
|===
+
This will set the payload to a map of key:value pairs that contains username and age.
. Next, add a data-mapper:transform element. 
+
[source, xml]
----
<data-mapper:transform doc:name="Map To CSV"/>
----
+
In order to configure the DataMapper, transition to Studio's Visual Editior.
. In the DataMapper properties editor, configure the fields as shown: 
* in the Input, keep the default **Map<k,v>* type and select *User Defined** structure.
* in the Output, select *CSV* type and *User Defined* structure.
+
image:/documentation/download/attachments/122752119/mel+ex+datamapper.png?version=1&modificationDate=1419008048272[image]
+
. For the input, click *Edit fields* to open the Define the Map dialog. 
. Give your map a *Name* and *Type*, then create two fields by clicking the green plus sign:
+
[cols=",",options="header",]
|===
|Name |Type
|*username* |String
|*age* |Integer
|===
+
image:/documentation/download/attachments/122752119/MELex4-input.png?version=1&modificationDate=1397167796303[image] +

. For the Output, click *Edit Fields*, then give the output a *Name*, select a *Delimiter*, and create three fields, as shown:
+
image:/documentation/download/attachments/122752119/MELex4-output.png?version=1&modificationDate=1397167796316[image]

. DataMapper now displays the mapping between input and output fields. The third output field (of_age) needs a MEL expression to get its values. Select it and then write the following MEL expression in the input box below:
+
[source]
----
input.age>18
----
+
The resulting mapping should look like this:
+
image:/documentation/download/attachments/122752119/mel+ex+datamapper2.png?version=1&modificationDate=1419012267687[image]

. Set Studio's view back to the XML editor. Below the last component, add a `file:outbound-endpoint` to send this data to a file:
+
[source, xml]
----
<file:outbound-endpoint path="path_of_your_choice" responseTimeout="10000" doc:name="File"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*path* a|
_(Example)_

----
Users/AaronMacBook/Desktop
----

|*responseTimeout* a|
----
10000
----

|*doc:name* a|
----
File
----

|===

. Below, add another Set Payload transformer, configured as shown:
+
[source, xml]
----
<set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
----
+
This expression will access the flow variable `username`, which was created by the Expression Component in your flow.
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*value* a|
----
Hello #[flowVars.username]
----

|*doc:name* a|
----
Set Payload
----

|===

. The full code of your flow should look like this:
+
[source, xml]
----
<flow name="greetingFlow4" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet4" doc:name="HTTP"/>
        <expression-component doc:name="Expression"><![CDATA[flowVars.username = message.inboundProperties.'http.query.params'.username]]></expression-component>
        <set-payload value="#[['username' :  message.inboundProperties.'http.query.params'.username, 'age' :  message.inboundProperties.'http.query.params'.age]]" doc:name="Set Payload"/>
        <data-mapper:transform config-ref="Map_To_CSV" doc:name="Map To CSV"/>
        <file:outbound-endpoint path="path_of_your_choice" responseTimeout="10000" doc:name="File"/>
        <set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
    </flow>
----

. Save and run your project.
. In a browser, access the URL `http://localhost:8081/greet4?username=yourName&age=22` +
This will print the words `Hello yourName` in your browser and also save a csv file that contains this data, plus the value `true` for the boolean parameter.

....
------

== Example 5 – Using Xpath

In all the previous examples, calls to the service were made via GET requests that included query parameters. In this example, the service you create is an API that accepts POST requests with XML bodies. The required XML includes two parameters, `username` and `age`. The service stores these two parameters and adds a third boolean parameter that evaluates if the user is above a certain age (if `age >18`)

In this example, you use MEL to:

* set a flow variable in the message
* generate an output based on evaluating the input
* parse an XML input through an xpath query
* dynamically set the payload

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. In a new flow, drag an HTTP connector, followed by an Expression Component, a Set Payload transformer, a File endpoint, and another Set Payload transformer. +
 image:/documentation/download/attachments/122752119/greeting+5.png?version=1&modificationDate=1419014275725[image]

. Open the HTTP connector's properties editor and give it the path `greet5`. In this way, the connector is be reached via the URI `http://localhost:8081/greet5`.
. Open the Expression Component's properties editor and set the following MEL expression:
+
[source]
----
flowVars.username = xpath3('/user/username').text
----
+
This expression calculates the result of the xpath3 function and sets it as the value of the flow variable `username`.
+
[TIP]
Since this MEL expression is used in an *expression component,* it doesn't need to be surrounded with `#[]`.
+
Since the payload is in XML, *xpath3* is needed to parse it.
. In the Set Payload transformer, set the *Value* field to the following:
+
[source]
----
#[xpath3('/user/username').text],
#[xpath3('/user/age').text],
#[xpath3('/user/age').text > 18]
----
+
This will set the payload to a string that contains three comma separated values. The third of these values is evaluating a condition and returns `true` or `false` depending on the user's age. Once again, as the payload is in XML, *xpath3* is needed to parse it.
. In the File endpoint, set a path of your choice to determine where the .csv file should be saved.
. Open the properties editor of the final Set Payload transformer and set the *Value* field with the following:
+
[source]
----
Hello #[flowVars.username]
----
+
This expression will access the flow variable username, which was created by the Expression Component earlier in your flow.
. Save and run your project.
. You must now send the HTTP connector an HTTP request that includes a body with an attached XML file. +
Send a POST request to` http://localhost:8081/greet5` attaching an XML to the body of the message. A sample XML is provided below.
+
[TIP]
The easiest way to do this is to send a POST via a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (for Google Chrome) or the http://curl.haxx.se/[curl] command line utility.
+
[source, xml]
----
<user>
  <username>test</username>
  <age>21</age>
</user>
----

This will print the words `Hello yourName` in your browser and also save a csv file that contains this data, plus the value `true` for the boolean parameter.

....
[tab,title="XML Editor"]
....

. In a new flow, add an `http:listener `configured as shown.
+
[source, xml]
----
<http:listener config-ref="HTTP_Listener_Configuration" path="greet5" doc:name="HTTP"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*config-ref* a|
----
HTTP_Listener_Configuration
----

|*path* a|
----
greet5
----

|*http://docname[doc:name]* a|
----
HTTP
----

|===
+
In this way, the connector is be reached via the URI `http://localhost:8081/greet5`.
. After the connector, add an Expression Component that will use a MEL expression to record the inbound property `username` into a flow variable. Because the payload is an XML file, it must be parsed with xpath3.
+
[source, xml]
----
<expression-component doc:name="Expression"><![CDATA[flowVars.username = xpath3('/user/username').text]]></expression-component>
----
+
This expression calculates the result of the xpath3 function and sets it as the value of the flow variable `username`.
+
[TIP]
Since this MEL expression is used in an *expression component,* it isn't surrounded with brackets `#[]`
. Add a set-payload transformer and set the `value` attribute to a comma-separated list of MEL expressions:
+
[source, xml]
----
<set-payload value="#[xpath3('/user/username').text], #[xpath3('/user/age').text], #[xpath3('/user/age').text &gt; 18]" doc:name="Set Payload"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*value* a|
----
#[xpath3('/user/username').text], #[xpath3('/user/age').text], #[xpath3('/user/age').text &gt; 18]
----

|*doc:name* a|
----
Set Payload
----
|===
+
This will set the payload to a string that contains three comma separated values. The third of these values is evaluating a condition and returns `true` or `false` depending on the user's age. Once again, as the payload is in XML, *xpath3* is needed to parse it.
. Add a `file:outbound-endpoint` to output the payload into a csv file.
+
[source, xml]
----
<file:outbound-endpoint path="path_of_your_choice" responseTimeout="10000" doc:name="File"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*path* a|
_(Example)_

----
Users/AaronMacBook/Downloads
----

|*responseTimeout* a|
----
10000
----

|*doc:name* a|
----
File
----

|===

. Below, add another set-payload transformer with a value containing a MEL expression that references the flow variable `username` that you set earlier in the flow.:
+
[source, xml]
----
<set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*value* a|
----
Hello #[flowVars.username]
----

|*doc:name* a|
----
Set Payload
----

|===

. The full code of your flow should look like this:
+
[source, xml]
----
<flow name="greetingFlow5" doc:name="greetingFlow5">
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet5" doc:name="HTTP"/>
        <expression-component doc:name="Expression"><![CDATA[flowVars.username = xpath3('/user/username').text]]></expression-component>
        <set-payload value="#[xpath3('/user/username').text], #[xpath3('/user/age').text], #[xpath3('/user/age').text &gt; 18]" doc:name="Set Payload"/>
        <file:outbound-endpoint path="path_of_your_choice" responseTimeout="10000" doc:name="File"/>
        <set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
    </flow>
----
. Save and run your project. You must now send the HTTP connector an HTTP request that includes a body with an attached XML file. Send a POST request to` http://localhost:8081/greet5`, attaching an XML to the body of the message. A sample XML is provided below.
+
[TIP]
The easiest way to do this is by sending a POST via a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (for Google Chrome) or the http://curl.haxx.se/[curl] command line utility.
+
[source, xml]
----
<user>
  <username>test</username>
  <age>21</age>
</user>
----
+
This will print the words `Hello yourName` in your browser and also save a csv file that contains this data, plus the value `true` for the boolean parameter.

....
------

== Example 6 – Working with Java Objects

This example is just like example 5, except that the service now receives JSON inputs rather than of XML.

The JSON input includes two parameters, `username` and `age`. The service stores these two parameters and adds a third boolean parameter that evaluates if the user is above a certain age (if `age>18`). Mule first transforms the JSON object into a Java object so that MEL expressions can access the object's attributes.

In this example, you will use MEL to:

* set a flow variable in the message
* generate an output based on evaluating the input
* access a Java object's attributes
* dynamically set the payload

[tabs]
------
[tab,title="STUDIO Visual Editor"]
....

. In a new flow, drag an HTTP connector, followed by a JSON to Object transformer, an Expression Component, a Set Payload transformer, a File endpoint, and another Set Payload transformer.
+
image:/documentation/download/attachments/122752119/greeting+6.png?version=1&modificationDate=1419014318671[image]

. Open the HTTP connector's properties editor and give it the path `greet6`. In this way, the connector is reached via the URI `http://localhost:8081/greet6`.
. Open the properties editor of the JSON to Object transformer and click the *Advanced* tab. Set the *Return Class* to `java.lang.Object` . With this configuration, the JSON input becomes a Java object with attributes that can be easily called by using `object.attribute` notation.
. In the expression component, set the following MEL expression that accesses an attribute of the object and sets that as the value of a flow variable called `username`:
+
[source]
----
flowVars.username = payload.username
----
+
[TIP]
Since this MEL expression is used in an *expression component,* it doesn't need to be surrounded with `#[]`.
. In the Set Payload component, set the *Value* field to the following comma-separated list of MEL expressions:
+
[source]
----
#[payload.username],
#[payload.age],
#[payload.age > 18]
----
This sets the payload to a string that contains three comma-separated values. The third of these values is evaluating a condition and returns `true` or `false` depending on the user's age.
. In the File endpoint, set a *Path* of your choice to determine where the csv files should be saved.
. Open the properties editor of the final Set Payload transformer and set the *Value* field with the following:
+
[source]
----
Hello #[flowVars.username]
----
+
This expression accesses the flow variable `username`, which was created by the Expression Component earlier in your flow.
. Save and run the project.
. You must now send the HTTP connector an HTTP request that includes a body with an attached JSON file. +
Send a POST request to` http://localhost:8081/greet6`, attaching a JSON object the body of the message. A sample JSON is provided below.
+
[TIP]
The easiest way to do this is by sending a POST via a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (for Google Chrome) or the http://curl.haxx.se/[curl] command line utility.
+
[source]
----
{ "username": "test", "age" : 21 }
----
+
This will print the words `Hello yourName` in your browser and also save a csv file that contains this data, plus the value `true` for the boolean parameter.

....
[tab,title="XML Editor"]
....

. In a new flow, add an `http:listener `configured as shown.
+
[source, xml]
----
<http:listener config-ref="HTTP_Listener_Configuration" path="greet6" doc:name="HTTP"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*config-ref* a|
----
HTTP_Listener_Configuration
----

|*path* a|
----
greet6
----

|*http://docname[doc:name]* a|
----
HTTP
----

|===
+
In this way, the connector is reached via the URI `http://localhost:8081/greet6`.
. After the connector, add a `json:json-to-object-transformer`. 
+
[source, xml]
----
<json:json-to-object-transformer doc:name="JSON to Object" returnClass="java.lang.Object"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*returnClass* a|
----
java.lang.Object
----
|*doc:name* a|
----
JSON to Object
----
|===
+
With this configuration, the JSON input becomes a Java object with attributes that can be easily called by using `object.attribute` notation.
. After the transformer, add an expression component that uses a MEL expression to access the Java object's `username` attribute and assign its value into a flow variable of the same name.
+
[source, xml]
----
<expression-component doc:name="Expression"><![CDATA[flowVars.username = payload.username]]></expression-component>
----
+
[TIP]
Since this MEL expression is used in an *expression component,* it doesn't need to be surrounded with `#[]`.

. Add a set-payload transformer and set the `value` attribute to a comma-separated list of MEL expressions:
+
[source, xml]
----
<set-payload value="#[payload.username], #[payload.age], #[payload.age &gt; 18]" doc:name="Set Payload"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
a|
----
value
----
a|
----
#[payload.username], #[payload.age], #[payload.age &gt; 18]
----
a|
----
doc:name
----
a|
----
Set Payload
----

|===
+
This sets the payload to a string that contains three comma-separated values. The third of these values is evaluating a condition and returns `true` or `false` depending on the user's age.

. Add  a `file:outbound-endpoint` to output the payload into a csv file.
+
[source, xml]
----
<file:outbound-endpoint path="path_of_your_choice" responseTimeout="10000" doc:name="File"/>
----
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*path* a|
_(Example)_

----
Users/AaronMacBook/Downloads
----
|*responseTimeout* a|
----
10000
----
|*doc:name* a|
----
File
----

|===
. Below, add another set-payload transformer, containing a MEL expression that references a flow variable:
+
[source, xml]
----
<set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
----
+
This expression accesses the flow variable `username`, which was created by the Expression Component earlier in your flow.
+
[width="100%",cols="50%,50%",options="header",]
|===
|Attribute |Value
|*value* a|
----
Hello #[flowVars.username]
----
|*doc:name* a|
----
Set Payload
----

----
|===
. The full code of your flow should look like this:
+
[source, xml]
----
<flow name="greetingFlow6" doc:name="greetingFlow6">
         <http:listener config-ref="HTTP_Listener_Configuration" path="greet6" doc:name="HTTP"/>
        <json:json-to-object-transformer doc:name="JSON to Object" returnClass="java.lang.Object"/>
        <expression-component doc:name="Expression"><![CDATA[flowVars.username = payload.username]]></expression-component>
        <set-payload value="#[payload.username], #[payload.age], #[payload.age &gt; 18]" doc:name="Set Payload"/>
        <file:outbound-endpoint path="users" responseTimeout="10000" doc:name="File"/>
        <set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
    </flow>
----
. Save and run the project. You must now send the HTTP connector an HTTP request that includes a body with an attached JSON file. +
Send a POST request to` http://localhost:8081/greet6`, attaching a JSON object the body of the message. A sample JSON is provided below.
+
[TIP]
The easiest way to do this is to send a POST via a browser extension such as https://chrome.google.com/webstore/detail/postman-rest-client/fdmmgilgnpjigdojojpjoooidkmcomcm[Postman] (for Google Chrome) or the http://curl.haxx.se/[curl] command line utility.
+
[source]
----
{ "username": "test", "age" : 21 }
----

This will print the words `Hello yourName` in your browser and also save a csv file that contains this data, plus the value `true` for the boolean parameter.

....
------

== Full Code for All Examples

[TIP]
For your convenience, you may download the link:/documentation/download/attachments/122752119/mel_example_project.zip?version=1&modificationDate=1397239701353[complete project]. Note that this project is configured specifically for the **Mule 3.6.0 runtime**. Please refer to the 3.5.X documentation for a 3.5.X compatible version.

[source, xml]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:json="http://www.mulesoft.org/schema/mule/json"
    xmlns:data-mapper="http://www.mulesoft.org/schema/mule/ee/data-mapper" xmlns:cxf="http://www.mulesoft.org/schema/mule/cxf"
    xmlns:file="http://www.mulesoft.org/schema/mule/file" xmlns:ws="http://www.mulesoft.org/schema/mule/ws" xmlns:tls="http://www.mulesoft.org/schema/mule/tls" xmlns:http="http://www.mulesoft.org/schema/mule/http" xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking" xmlns="http://www.mulesoft.org/schema/mule/core" xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
    xmlns:spring="http://www.springframework.org/schema/beans" version="EE-3.6.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/json http://www.mulesoft.org/schema/mule/json/current/mule-json.xsd http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans-current.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/ee/tracking http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
http://www.mulesoft.org/schema/mule/tls http://www.mulesoft.org/schema/mule/tls/current/mule-tls.xsd
http://www.mulesoft.org/schema/mule/ee/data-mapper http://www.mulesoft.org/schema/mule/ee/data-mapper/current/mule-data-mapper.xsd">


<data-mapper:config name="new_mapping_grf" transformationGraphPath="new_mapping.grf" doc:name="DataMapper"/>
    <data-mapper:config name="map_to_csv" transformationGraphPath="map_to_csv.grf" doc:name="map_to_csv"/>

<!-- Necessary configuration element used by all examples  -->
<http:listener-config name="HTTP_Listener_Configuration" host="localhost" port="8081" doc:name="HTTP Listener Configuration"/>


<!-- Example 1 Start  How to access properties using MEL, how to set a payload dynamically -->
    <flow name="greetingFlow1" doc:name="greetingFlow1">
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet1" doc:name="HTTP"/>
        <set-payload value="Hello #[message.inboundProperties.'http.query.params'.username]" doc:name="Set Payload"/>
    </flow>

<!-- Example 1 End -->

<!-- Example 2 Start  How to dynamically route messages based on the results of a conditional expression -->
       <flow name="greetingFlow2" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet2" doc:name="HTTP"/>
        <choice doc:name="Choice">
            <when expression="#[message.inboundProperties.'http.query.params'.username == empty]">
                <set-payload value="#['No username provided']" doc:name="Set Payload for invalid username"/>
            </when>
            <otherwise>
                <set-payload value="Hello #[message.inboundProperties.'http.query.params'.username]" doc:name="Set Payload for valid username"/>
            </otherwise>
        </choice>
    </flow>
<!-- Example 2 End -->

<!-- Example 3 Start  How to assign variables, how to evaluate a condition -->
    <flow name="greetingFlow3" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet3" doc:name="HTTP"/>
        <expression-component doc:name="Expression"><![CDATA[flowVars.username = message.inboundProperties.'http.query.params'.username]]></expression-component>
        <set-payload value="#[message.inboundProperties.'http.query.params'.username], #[message.inboundProperties.'http.query.params'.age], #[message.inboundProperties.'http.query.params'.age &gt;18]" doc:name="Set Payload"/>
        <file:outbound-endpoint path="Path_of_your_choice" responseTimeout="10000" doc:name="File"/>
        <set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
    </flow>
<!-- Example 3 End -->

<!-- Example 4 Start  How to create a map, how to evaluate a condition with DataMapper -->
    <flow name="greetingFlow4" >
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet4" doc:name="HTTP"/>
        <expression-component doc:name="Expression"><![CDATA[flowVars.username = message.inboundProperties.'http.query.params'.username]]></expression-component>
        <set-payload value="#[['username' :  message.inboundProperties.'http.query.params'.username, 'age' :  message.inboundProperties.'http.query.params'.age]]" doc:name="Set Payload"/>
        <data-mapper:transform config-ref="Map_To_CSV" doc:name="Map To CSV"/>
        <file:outbound-endpoint path="path_of_your_choice" responseTimeout="10000" doc:name="File"/>
        <set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
    </flow>
<!-- Example 4 End -->

<!-- Example 5 Start  How to parse XML input with Xpath -->
    <flow name="docs-greetingFlow5" doc:name="greetingFlow5">
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet5" doc:name="HTTP"/>
        <expression-component doc:name="Expression"><![CDATA[flowVars.username = xpath3('/user/username').text]]></expression-component>
        <set-payload value="#[xpath3('/user/username').text], #[xpath3('/user/age').text], #[xpath3('/user/age').text &gt; 18]" doc:name="Set Payload"/>
        <file:outbound-endpoint path="Path_of_your_choice" responseTimeout="10000" doc:name="File"/>
        <set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
    </flow>
<!-- Example 5 End -->

<!-- Example 6 Start  How to parse Java objects -->
    <flow name="greetingFlow6" doc:name="greetingFlow6">
        <http:listener config-ref="HTTP_Listener_Configuration" path="greet6" doc:name="HTTP"/>
        <json:json-to-object-transformer doc:name="JSON to Object" returnClass="java.lang.Object"/>
        <expression-component doc:name="Expression"><![CDATA[flowVars.username = payload.username]]></expression-component>
        <set-payload value="#[payload.username], #[payload.age], #[payload.age &gt; 18]" doc:name="Set Payload"/>
        <file:outbound-endpoint path="Path_of_your_choice" responseTimeout="10000" doc:name="File"/>
        <set-payload value="Hello #[flowVars.username]" doc:name="Set Payload"/>
    </flow>
<!-- Example 6 End -->

</mule>
----

== See Also

* Access the Mule Expression Language link:/documentation/display/current/Mule+Expression+Language+Reference[Reference] and link:/documentation/display/current/Mule+Expression+Language+Tips[Tips].
* Want to learn more about how to get information about the Mule message so that you can work with it using MEL? Try out this link:/documentation/display/current/Mule+Message+Tutorial[tutorial]. 
